environements/dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: users
        image: abdelhak245/microservice-front:1.0
        ports:
        - containerPort: 8081
