environements/dev/frontend/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: notes
          app: users
